# Embed_Labs

./: README.md
L1/: CMakeLists.txt  auc_embedkit_nrf52832.overlay  prj.conf
L1/src/: main.c
L2/: CMakeLists.txt  auc_embedkit_nrf52832.overlay  prj.conf
L2/src/: main.c
L3/: CMakeLists.txt  auc_embedkit_nrf52832.overlay  prj.conf
L3/src/: main.c
L4/: CMakeLists.txt
L4/src/: gpio.c  gpio.h  main.c
L5/: CMakeLists.txt  auc_embedkit_nrf52832.overlay
L5/src/: main.c
L7/: CMakeLists.txt  prj.conf
L7/src/: main.c
L8/: CMakeLists.txt
